--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,109 @@
     transform: rotate(360deg);
   }
 }
+
+.App222 {
+  font-family: sans-serif;
+  text-align: center;
+  /* position: absolute; */
+  border: 1px solid green;
+}
+
+.header {
+  /* background-color: #0a2863; */
+  min-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.headerlogo {
+  width: 100%;
+}
+
+.link {
+  margin: 15px;
+  color: azure;
+}
+
+.link:hover{
+  color: rgb(189, 233, 29);
+}
+
+.navitem {
+  margin-left: 30px;
+  padding: 10px;
+  background-color: dimgray;  
+  width: 100%;
+}
+
+.form-group{
+  padding: 10px;
+}
+
+.paramtable {
+  margin: auto;
+  text-align: Left;
+}
+
+.datepicker {
+  background-color: rgb(231, 230, 230);
+}
+
+.datedetail {
+  font-size: small;
+  color: darkcyan;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-bottom: 20px;
+}
+
+.custbutton {
+  margin: 6px;
+  color: blanchedalmond;
+  background-color: darkslategray;
+}
+
+.reportdescr {
+  border: black;
+  width: 100%;
+}
+
+.tableparams {
+  font-weight: bold;
+  float: left;
+  margin-left: 30px;
+  margin-bottom: 6px;
+}
+
+.downloadlink {
+  float: right;
+  margin-right: 30px;
+}
+
+.tabletitle {
+  width: 100%
+}
+
+.error {
+  color: red;
+}
+
+#rbtitle {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: x-small;
+  float: right;
+}
+
+#container{
+  width: 100%;
+}
+
+#middle {
+  float: left;
+  width: 100%;
+}
+
+td {
+  padding: 10px;
+}
